# aside-k9p5np

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ai-service.yml  auth-service.yml  collaboration-service.yml  detection-service.yml  search-service.yml  translation-service.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/: base.dockerfile  golang.dockerfile  nodejs.dockerfile  python.dockerfile
infrastructure/helm/api-gateway/: Chart.yaml  values.yaml
infrastructure/helm/api-gateway/templates/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/helm/cert-manager/: values.yaml
infrastructure/helm/istio/: values.yaml
infrastructure/helm/monitoring/elk/: values.yaml
infrastructure/helm/monitoring/grafana/: values.yaml
infrastructure/helm/monitoring/jaeger/: values.yaml
infrastructure/helm/monitoring/prometheus/: values.yaml
infrastructure/helm/vault/: values.yaml
infrastructure/terraform/aws/: backend.tf  outputs.tf  provider.tf  variables.tf  versions.tf
infrastructure/terraform/aws/cloudfront/: main.tf  variables.tf
infrastructure/terraform/aws/eks/: main.tf  variables.tf
infrastructure/terraform/aws/elasticache/: main.tf  variables.tf
infrastructure/terraform/aws/rds/: main.tf  variables.tf
infrastructure/terraform/aws/route53/: main.tf  variables.tf
infrastructure/terraform/aws/s3/: main.tf  variables.tf
infrastructure/terraform/aws/vpc/: main.tf  variables.tf
infrastructure/terraform/aws/waf/: main.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  package.json  tsconfig.json
src/backend/ai-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/ai-service/src/: __init__.py  main.py
src/backend/ai-service/src/config/: settings.py
src/backend/ai-service/src/models/: detection_model.py
src/backend/ai-service/src/services/: openai_service.py
src/backend/ai-service/src/utils/: model_utils.py
src/backend/ai-service/tests/: test_ai_service.py
src/backend/api-gateway/: Dockerfile  kong.yml
src/backend/api-gateway/plugins/: cors-config.lua  jwt-validator.lua  rate-limiting.lua
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/src/: index.ts
src/backend/auth-service/tests/: auth.test.ts
src/backend/collaboration-service/: Dockerfile  package.json  tsconfig.json
src/backend/collaboration-service/src/: index.ts
src/backend/collaboration-service/tests/: collaboration.test.ts
src/backend/db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_detection_tables.down.sql  000002_add_detection_tables.up.sql  000003_add_community_tables.down.sql  000003_add_community_tables.up.sql
src/backend/detection-service/: Dockerfile  go.mod  go.sum
src/backend/detection-service/cmd/: main.go
src/backend/detection-service/tests/: detection_test.go
src/backend/k8s/: ai-service-deployment.yaml  api-gateway-deployment.yaml  auth-service-deployment.yaml  collaboration-service-deployment.yaml  configmaps.yaml  detection-service-deployment.yaml  ingress.yaml  search-service-deployment.yaml  secrets.yaml  translation-service-deployment.yaml
src/backend/search-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/search-service/src/: __init__.py  main.py
src/backend/search-service/src/config/: elasticsearch.py
src/backend/search-service/src/models/: search_model.py
src/backend/search-service/src/services/: search_service.py
src/backend/search-service/src/utils/: query_builder.py
src/backend/search-service/tests/: test_search.py
src/backend/shared/proto/: auth.proto  detection.proto  search.proto  translation.proto
src/backend/shared/schemas/: community.schema.json  detection.schema.json  platform.schema.json
src/backend/translation-service/: Dockerfile  go.mod  go.sum
src/backend/translation-service/cmd/: main.go
src/backend/translation-service/tests/: translation_test.go
src/web/: .env.development  .env.production  .env.test  .eslintrc.ts  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
src/web/src/config/: api.config.ts  auth.config.ts  theme.config.ts
src/web/src/constants/: api.constants.ts  routes.constants.ts  theme.constants.ts
(+122 files in other folders)
